--- a/templates/index.html
+++ b/templates/index.html
@@ -206,12 +206,12 @@
 <body>
   <div class="container">
     <header>
-      <img src="{{ url_for('static', filename='banner.png') }}" alt="सकल शिक्षक समाज बैनर" />
+      <img src="https://raw.githubusercontent.com/eraj1980/collection/main/banner.png" alt="सकल शिक्षक समाज बैनर" />
       <div class="subtitle">मीरा-भाईंदर</div>
     </header>
 
     <main>
-      <img src="{{ url_for('static', filename='content.png') }}" alt="सकल शिक्षक समाज सामग्री" class="content-image" />
+      <img src="https://raw.githubusercontent.com/eraj1980/collection/main/banner.png" alt="सकल शिक्षक समाज सामग्री" class="content-image" />
 
       <form id="supportForm" name="supportForm" class="signature-form">
         <h3>Register Your Support</h3>
@@ -294,4 +294,5 @@
   </script>
 </body>
 </html>
+
 
